- Removed " cm" from value, added - added message for errors

--- a/src/main/resources/templates/bestilling.html
+++ b/src/main/resources/templates/bestilling.html
@@ -9,6 +9,7 @@
 
 
 <div class="container mt-5 p-3 pt-5 bg-body-tertiary">
+    <div class="alert alert-warning" th:if="${#ctx.message}" th:text="${#ctx.message}"></div>
     <h1>Bestil QuickByg tilbud - carport med fladt tag</h1>
     <p>Med et specialudviklet computerprogram kan vi lynhurtigt beregne prisen og udskrive en skitsetegning på en carport indenfor vores standardprogram. <br>Tilbud og skitsetegning fremsendes med post hurtigst muligt.<br>Ved bestilling medfølger standardbyggevejledning.</p>
     <p>Udfyld formularen omhyggeligt og klik på "Bestil tilbud".<br>Felter markeret med * SKAL udfyldes!</p>
@@ -27,43 +28,43 @@
                     <select class="form-select" name="carportWidth" id="carportWidth" required="" data-name="carportWidth">
                         <option selected="">
                         </option>
-                        <option value="240 cm">
+                        <option value="240">
                             240 cm
                         </option>
-                        <option value="270 cm">
+                        <option value="270">
                             270 cm
                         </option>
-                        <option value="300 cm">
+                        <option value="300">
                             300 cm
                         </option>
-                        <option value="330 cm">
+                        <option value="330">
                             330 cm
                         </option>
-                        <option value="360 cm">
+                        <option value="360">
                             360 cm
                         </option>
-                        <option value="390 cm">
+                        <option value="390">
                             390 cm
                         </option>
-                        <option value="420 cm">
+                        <option value="420">
                             420 cm
                         </option>
-                        <option value="450 cm">
+                        <option value="450">
                             450 cm
                         </option>
-                        <option value="480 cm">
+                        <option value="480">
                             480 cm
                         </option>
-                        <option value="510 cm">
+                        <option value="510">
                             510 cm
                         </option>
-                        <option value="540 cm">
+                        <option value="540">
                             540 cm
                         </option>
-                        <option value="570 cm">
+                        <option value="570">
                             570 cm
                         </option>
-                        <option value="600 cm">
+                        <option value="600">
                             600 cm
                         </option>
                     </select>
@@ -77,61 +78,61 @@
                     <select class="form-select" name="carportLength" id="carportLength" required="" data-name="carportLength">
                         <option selected="">
                         </option>
-                        <option value="240 cm">
+                        <option value="240">
                             240 cm
                         </option>
-                        <option value="270 cm">
+                        <option value="270">
                             270 cm
                         </option>
-                        <option value="300 cm">
+                        <option value="300">
                             300 cm
                         </option>
-                        <option value="330 cm">
+                        <option value="330">
                             330 cm
                         </option>
-                        <option value="360 cm">
+                        <option value="360">
                             360 cm
                         </option>
-                        <option value="390 cm">
+                        <option value="390">
                             390 cm
                         </option>
-                        <option value="420 cm">
+                        <option value="420">
                             420 cm
                         </option>
-                        <option value="450 cm">
+                        <option value="450">
                             450 cm
                         </option>
-                        <option value="480 cm">
+                        <option value="480">
                             480 cm
                         </option>
-                        <option value="510 cm">
+                        <option value="510">
                             510 cm
                         </option>
-                        <option value="540 cm">
+                        <option value="540">
                             540 cm
                         </option>
-                        <option value="570 cm">
+                        <option value="570">
                             570 cm
                         </option>
-                        <option value="600 cm">
+                        <option value="600">
                             600 cm
                         </option>
-                        <option value="630 cm">
+                        <option value="630">
                             630 cm
                         </option>
-                        <option value="660 cm">
+                        <option value="660">
                             660 cm
                         </option>
-                        <option value="690 cm">
+                        <option value="690">
                             690 cm
                         </option>
-                        <option value="720 cm">
+                        <option value="720">
                             720 cm
                         </option>
-                        <option value="750 cm">
+                        <option value="750">
                             750 cm
                         </option>
-                        <option value="780 cm">
+                        <option value="780">
                             780 cm
                         </option>
                     </select>
@@ -170,58 +171,58 @@
                         <option value="Uden redskabsrum" selected>
                             Uden redskabsrum
                         </option>
-                        <option value="210 cm">
+                        <option value="210">
                             210 cm
                         </option>
-                        <option value="240 cm">
+                        <option value="240">
                             240 cm
                         </option>
-                        <option value="270 cm">
+                        <option value="270">
                             270 cm
                         </option>
-                        <option value="300 cm">
+                        <option value="300">
                             300 cm
                         </option>
-                        <option value="330 cm">
+                        <option value="330">
                             330 cm
                         </option>
-                        <option value="360 cm">
+                        <option value="360">
                             360 cm
                         </option>
-                        <option value="390 cm">
+                        <option value="390">
                             390 cm
                         </option>
-                        <option value="420 cm">
+                        <option value="420">
                             420 cm
                         </option>
-                        <option value="450 cm">
+                        <option value="450">
                             450 cm
                         </option>
-                        <option value="480 cm">
+                        <option value="480">
                             480 cm
                         </option>
-                        <option value="510 cm">
+                        <option value="510">
                             510 cm
                         </option>
-                        <option value="540 cm">
+                        <option value="540">
                             540 cm
                         </option>
-                        <option value="570 cm">
+                        <option value="570">
                             570 cm
                         </option>
-                        <option value="600 cm">
+                        <option value="600">
                             600 cm
                         </option>
-                        <option value="630 cm">
+                        <option value="630">
                             630 cm
                         </option>
-                        <option value="660 cm">
+                        <option value="660">
                             660 cm
                         </option>
-                        <option value="690 cm">
+                        <option value="690">
                             690 cm
                         </option>
-                        <option value="720 cm">
+                        <option value="720">
                             720 cm
                         </option>
                     </select>
@@ -236,61 +237,61 @@
                         <option value="Uden redskabsrum" selected>
                             Uden redskabsrum
                         </option>
-                        <option value="150 cm">
+                        <option value="150">
                             150 cm
                         </option>
-                        <option value="180 cm">
+                        <option value="180">
                             180 cm
                         </option>
-                        <option value="210 cm">
+                        <option value="210">
                             210 cm
                         </option>
-                        <option value="240 cm">
+                        <option value="240">
                             240 cm
                         </option>
-                        <option value="270 cm">
+                        <option value="270">
                             270 cm
                         </option>
-                        <option value="300 cm">
+                        <option value="300">
                             300 cm
                         </option>
-                        <option value="330 cm">
+                        <option value="330">
                             330 cm
                         </option>
-                        <option value="360 cm">
+                        <option value="360">
                             360 cm
                         </option>
-                        <option value="390 cm">
+                        <option value="390">
                             390 cm
                         </option>
-                        <option value="420 cm">
+                        <option value="420">
                             420 cm
                         </option>
-                        <option value="450 cm">
+                        <option value="450">
                             450 cm
                         </option>
-                        <option value="480 cm">
+                        <option value="480">
                             480 cm
                         </option>
-                        <option value="510 cm">
+                        <option value="510">
                             510 cm
                         </option>
-                        <option value="540 cm">
+                        <option value="540">
                             540 cm
                         </option>
-                        <option value="570 cm">
+                        <option value="570">
                             570 cm
                         </option>
-                        <option value="600 cm">
+                        <option value="600">
                             600 cm
                         </option>
-                        <option value="630 cm">
+                        <option value="630">
                             630 cm
                         </option>
-                        <option value="660 cm">
+                        <option value="660">
                             660 cm
                         </option>
-                        <option value="690 cm">
+                        <option value="690">
                             690 cm
                         </option>
                     </select>
