- Added a form with POST method to submit order details to the `/kvittering` endpoint.

--- a/src/main/resources/templates/kvittering.html
+++ b/src/main/resources/templates/kvittering.html
@@ -28,6 +28,7 @@
     </div>
   </div>
 </nav>
+<form method="post" action="/kvittering">
 <div class="container mt-5 p-3 pt-5 bg-body-tertiary">
   <div class="container p-0">
     <div class="card px-4">
