--- a/src/main/resources/templates/ordreoversigt.html
+++ b/src/main/resources/templates/ordreoversigt.html
@@ -15,16 +15,17 @@
 
     <div class="row">
         <div class="col-4" th:each="ordera : ${assigned}">
-            <div class="card" style="width: 18rem; height: 15rem;">
+            <div class="card m-2">
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Ordrer ID:</strong> <span th:text="${ordera.orderId}"></span></li>
                         <li class="list-group-item"><strong>Kunde navn:</strong> <span th:text="${ordera.customer.name}"></span></li>
+                        <li class="list-group-item"><strong>Ordre status:</strong> <span class="badge text-bg-warning" th:text="${ordera.orderStatus}"></span></li>
                         <li class="list-group-item"><strong>Sælger navn:</strong> <span th:text="${ordera.salesPerson.name}"></span></li>
                     </ul>
-                    <div class="view-information mt-2">
-                        <a href="ordredetaljer.html" class="view" th:href="@{/order/{orderId}(orderId=${ordera.orderId})}">
-                            <button class="view-btn btn btn-secondary" type="button">Se informationer</button>
+                    <div class="card-text mt-2">
+                        <a href="ordredetaljer.html" class="btn btn-primary m-1" th:href="@{/order/{orderId}(orderId=${ordera.orderId})}">
+                            Se informationer
                         </a>
                     </div>
                 </div>
@@ -34,7 +35,7 @@
 
 
     <h3>Ikke tildelte ordrer</h3>
-    <div class="row row-cols-4 g-4">
+    <div class="row row-cols g-4">
         <div class="col" th:each="orderu : ${unassigned}">
             <div class="card">
                 <div class="card-body">
