Added line to show order price

--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -28,6 +28,7 @@
                     <li class="list-group-item">Skur beklædning: <span>forskudt</span></li>
                     <li class="list-group-item">Tag type: <span th:text="${order.carportRoof}">Fladt</span> </li>
                     <li class="list-group-item">Tag beklædning: <span>Trapez</span> </li>
+                    <li class="list-group-item" >Carport indkøbspris: <span th:text="${order.price}">420</span> kr</li>
                 </ul>
             </div>
         </div>
