--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -28,7 +28,6 @@
                     <li class="list-group-item">Skur beklædning: <span>forskudt</span></li>
                     <li class="list-group-item">Tag type: <span th:text="${order.carportRoof}">Fladt</span> </li>
                     <li class="list-group-item">Tag beklædning: <span>Trapez</span> </li>
-                    <li class="list-group-item" >Carport indkøbspris: <span th:text="${order.price}">420</span> kr</li>
                 </ul>
             </div>
         </div>
@@ -104,7 +103,11 @@
         </div>
     </div>
     <div class="card m-3">
-        Pris
+
+        <p class="card-text" >Carport indkøbspris: <span th:text="${order.buyInPrice}">420</span> kr</p>
+        <p class="card-text" >Carport foreslået salgspris: <span th:text="${order.sellPrice}">420</span> kr</p>
+
+
     </div>
     <div class="card m-3">
         <div class="row gx-3" th:if="${#ctx.session.currentUser!=null}">
