fixed values on no shed, values should be 0

--- a/src/main/resources/templates/bestilling.html
+++ b/src/main/resources/templates/bestilling.html
@@ -168,7 +168,7 @@
                 </label>
                 <div class="_field-wrapper">
                     <select class="form-select" name="shedWidth" id="shedWidth" required="" data-name="shedWidth">
-                        <option value="Uden redskabsrum" selected>
+                        <option value="0" selected>
                             Uden redskabsrum
                         </option>
                         <option value="210">
@@ -234,7 +234,7 @@
                 </label>
                 <div class="_field-wrapper">
                     <select class="form-select" name="shedLength" id="shedLength" required="" data-name="shedLength">
-                        <option value="Uden redskabsrum" selected>
+                        <option value="0" selected>
                             Uden redskabsrum
                         </option>
                         <option value="150">
