--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="index.html" th:href="@{/}">Login</a>
+                    <a class="nav-link" href="index.html" th:href="@{/}" th:if="${#ctx.session.currentUser==null}">Login</a>
+                    <a class="nav-link" href="index.html" th:href="@{/logout}" th:if="${#ctx.session.currentUser!=null}">Logout</a>
                     <a class="nav-link" href="#" th:href="@{/orders}">Ordre oversigt</a>
                     <a class="nav-link" href="#" th:href="@{/order/1}">Ordre detaljer</a>
                     <a class="nav-link" href="#" th:href="@{/draw}">Tegning</a>
