hide price information when not logged in

--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -102,14 +102,14 @@
 
         </div>
     </div>
-    <div class="card m-3" th:if="${#session.currentUser}">
+    <div class="card m-3" th:if="${#ctx.session.currentUser!=null}">
         <div class="card-body row-cols-3">
             <div class="card-text col" >Carport indkøbspris: <span th:text="${order.buyInPrice}">420</span> kr</div>
             <div class="card-text col" >Carport foreslået salgspris: <input type="number" th:value="${order.sellPrice}"> kr</div>
             <div class="card-text col">Avance procent <input type="number" th:value="" /></div>
         </div>
     </div>
-    <div class="card m-3" th:if="${!(#session.currentUser)}">
+    <div class="card m-3" th:if="${#ctx.session.currentUser==null}">
         <div class="card-body">
             <p class="card-text" >Carport pris: <span th:text="${order.sellPrice}">420</span> kr</p>
         </div>
