fix layout of avanceprocent

--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -103,10 +103,12 @@
         </div>
     </div>
     <div class="card m-3" th:if="${#ctx.session.currentUser!=null}">
-        <div class="card-body row-cols-3">
-            <div class="card-text col" >Carport indkøbspris: <span th:text="${order.buyInPrice}">420</span> kr</div>
-            <div class="card-text col" >Carport foreslået salgspris: <input type="number" th:value="${order.sellPrice}"> kr</div>
-            <div class="card-text col">Avance procent <input type="number" th:value="" /></div>
+        <div class="card-body">
+            <div class="row row-cols-3">
+                <div class="col"><div class="card-text" >Carport indkøbspris: <span th:text="${order.buyInPrice}">420</span> kr</div></div>
+                <div class="col"><div class="card-text col" >Carport foreslået salgspris: <input type="number" th:value="${order.sellPrice}"> kr</div></div>
+                <div class="col"><div class="card-text col">Avance procent <input type="number" th:value="${order.profitMargin}" /></div></div>
+            </div>
         </div>
     </div>
     <div class="card m-3" th:if="${#ctx.session.currentUser==null}">
